--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -18,7 +18,7 @@
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Artgen</a>
+            <a class="navbar-brand" href="/">Artgen</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" href="/">Home<span class="sr-only">(current)</span></a>
 
                     {% if user.is_authenticated %}
                     <a class="nav-item nav-link" href="{% url 'art_new' %}">Add Artwork</a>
