--- a/app/templates/artgen/art.html
+++ b/app/templates/artgen/art.html
@@ -3,4 +3,10 @@
 {% block content %}
     <h2>{{ art.title }}</h2>
 
+    <img src="{{ art.filepath }}" class="img-fluid" alt="Responsive image">
+    <img src="{{ art.image_1.url }}" class="img-fluid" alt="Responsive image">
+    <img src="{{ art.image_2.url }}" class="img-fluid" alt="Image 2">
+
+    
+
 {% endblock %}
