added art on front page

--- a/app/templates/artgen/index.html
+++ b/app/templates/artgen/index.html
@@ -3,12 +3,17 @@
 
 {% block content %}
 {% if artlist %}
-    <ul>
+<div class="card-deck">
     {% for art in artlist %}
-        {{ art.id }}
+    <div class="card">
+        <img class="card-img-top" src="{{ art.filepath }}" alt="Card image cap" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">{{ art.title }}</h5>
+        </div>
+    </div class="card">
     {% endfor %}
-    </ul>
+</div>
 {% else %}
-    <p>No arts are available</p>
+<p>No arts are available</p>
 {% endif %}
 {% endblock %}
