--- a/app/templates/allauth/account/login.html
+++ b/app/templates/allauth/account/login.html
@@ -6,8 +6,8 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-
-<h1 id="login-title">{% trans "ArtGenerator" %}</h1>
+<br />
+<h1 class="login-title">{% trans "ArtGen - Login" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
@@ -33,7 +33,22 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> -->
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %} -->
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
+<div class="form-container">
+  <form class="login" method="POST" action="{% url 'account_login' %}">
+    <div class="form-group">
+      <input type="username" class="form-control form-input" id="username" placeholder="Username">
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control form-input" id="password" placeholder="Password">
+    </div>
+    <button type="submit" class="btn btn-primary form-submit-button"><i class="fas fa-sign-in-alt"></i> Sign in</button>
+    <br />
+    <br />
+    <button type="submit" class="btn btn-primary form-submit-button invert-button">Register new account</button>
+  </form>
+</div>
+
+<!-- <form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
@@ -41,6 +56,6 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> -->
   {% endif %}
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Need help signging in?" %}</a>
   <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form>
+</form> -->
 
 {% endblock %}
