--- a/app/templates/allauth/account/signup.html
+++ b/app/templates/allauth/account/signup.html
@@ -2,20 +2,36 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block head_title %}{% trans "ArtGen - New Account" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<br />
+<h1 class="login-title">{% trans "ArtGen - New Account" %}</h1>
+<br />
+<div class="form-container">
+  <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    <div class="form-group">
+      <input type="email" class="form-control form-input" id="email" placeholder="Email Address">
+    </div>
+    <div class="form-group">
+      <input type="username" class="form-control form-input" id="username" placeholder="Username">
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control form-input" id="password" placeholder="Password">
+    </div>
+    <br />
+    <button type="submit" class="btn btn-primary form-submit-button"><i class="fas fa-thumbs-up"></i> Sign Up</button>
+    <a href="login.html" style="margin-top: 30px;">Already have an account?</a>
+  </form>
+</div>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+<!-- <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+</form> -->
 
 {% endblock %}
