--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+        <script src="https://kit.fontawesome.com/14e4960703.js" crossorigin="anonymous"></script>
 
         <title>Artgen</title>
         {% block extra_head %}
