Minor fix to signup.html on spacing

--- a/app/templates/allauth/account/signup.html
+++ b/app/templates/allauth/account/signup.html
@@ -20,7 +20,7 @@
       <input type="password" class="form-control form-input" id="password" placeholder="Password">
     </div>
     <br />
-    <button type="submit" class="btn btn-primary form-submit-button"><i class="fas fa-thumbs-up"></i> Sign Up</button>
+    <button type="submit" style="margin-bottom: 10px;" class="btn btn-primary form-submit-button"><i class="fas fa-thumbs-up"></i> Sign Up</button>
     <a href="login.html" style="margin-top: 30px;">Already have an account?</a>
   </form>
 </div>
