--- a/app/templates/allauth/account/login.html
+++ b/app/templates/allauth/account/login.html
@@ -37,19 +37,27 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> -->
   <form class="login" method="POST" action="{% url 'account_login' %}">
     {% csrf_token %}
     <div class="form-group">
-      <input type="username" class="form-control form-input" id="username" placeholder="Username">
+      <input type="username" class="form-control form-input" id="username" placeholder="Username" name="{{ form.login }}
     </div>
     <div class="form-group">
-      <input type="password" class="form-control form-input" id="password" placeholder="Password">
+      <input type="password" class="form-control form-input" id="password" placeholder="Password" name="{{ form.password }}
     </div>
     <button type="submit" class="btn btn-primary form-submit-button"><i class="fas fa-sign-in-alt"></i> Sign in</button>
     <br />
     <br />
-    <button type="submit" class="btn btn-primary form-submit-button invert-button">Register new account</button>
+    <button class="btn btn-primary form-submit-button invert-button">
+        <a href="{% url 'account_signup' %}">{% trans "Register new account" %}</a>
+    </button>
+    <br />
+    <br />
+    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Need help signing in?" %}</a>
+    {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
   </form>
 </div>
 
-<!-- <form class="login" method="POST" action="{% url 'account_login' %}">
+<!--<form class="login" method="POST" action="{% url 'account_login' %}">
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
