--- a/app/templates/allauth/account/signup.html
+++ b/app/templates/allauth/account/signup.html
@@ -12,17 +12,20 @@
   <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
     {% csrf_token %}
     <div class="form-group">
-      <input type="email" class="form-control form-input" id="email" placeholder="Email Address">
+      <input type="email" class="form-control form-input" id="email" placeholder="Email Address" name="{{ form.email }}
     </div>
     <div class="form-group">
-      <input type="username" class="form-control form-input" id="username" placeholder="Username">
+      <input type="username" class="form-control form-input" id="username" placeholder="Username" name="{{ form.username }}
     </div>
     <div class="form-group">
-      <input type="password" class="form-control form-input" id="password" placeholder="Password">
+      <input type="password" class="form-control form-input" id="password" placeholder="Password" />
     </div>
     <br />
-    <button type="submit" style="margin-bottom: 10px;" class="btn btn-primary form-submit-button"><i class="fas fa-thumbs-up"></i> Sign Up</button>
-    <a href="login.html" style="margin-top: 30px;">Already have an account?</a>
+    {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <button type="submit" style="margin-bottom: 10px;" class="btn btn-primary form-submit-button"><i class="fas fa-thumbs-up"></i> {% trans "Sign Up" %}</button>
+    <a href="{% url 'account_login' %}" style="margin-top: 30px;">Already have an account?</a>
   </form>
 </div>
 
