--- a/app/templates/allauth/account/signup.html
+++ b/app/templates/allauth/account/signup.html
@@ -11,15 +11,30 @@
 <div class="form-container">
   <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
     {% csrf_token %}
+
+    {% if form.non_field_errors %}
+    {% for error in form.non_field_errors %}
+    <p class="errornote">
+        {{ error }}
+    </p>
+    {% endfor %}
+    {% endif %}
+
     <div class="form-group">
-      <input type="email" class="form-control form-input" id="email" placeholder="Email Address" name="{{ form.email }}
+      {{ form.email.errors }}
+      <div class="form-control form-input"> {{ form.email }} </div>
     </div>
+
     <div class="form-group">
-      <input type="username" class="form-control form-input" id="username" placeholder="Username" name="{{ form.username }}
+      {{ form.username.errors }}
+      <div class="form-control form-input"> {{ form.username }} </div>
     </div>
+
     <div class="form-group">
-      <input type="password" class="form-control form-input" id="password" placeholder="Password" />
+      {{ form.password1.errors }}
+      <div class="form-control form-input"> {{ form.password1 }} </div>
     </div>
+    
     <br />
     {% if redirect_field_value %}
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
