--- a/app/templates/allauth/account/signup.html
+++ b/app/templates/allauth/account/signup.html
@@ -32,7 +32,10 @@
 
     <div class="form-group">
       {{ form.password1.errors }}
-      <div class="form-control form-input"> {{ form.password1 }} </div>
+      <div class="form-control form-input"> 
+      {{ form.password1 }}
+      <small class = "form-text text-muted">Password must be at least 6 characters</small>
+      </div>
     </div>
     
     <br />
