--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -18,8 +18,8 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">Artgen</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-success " style="text-align:center;">
+            <a class="navbar-brand" href="/" style="font-size:35px;color:white;padding-left: 80px">ARTGEN</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,22 +27,25 @@
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="/">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" href="/" style="font-size:35px;padding-left: 150px">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" href="/" style="font-size:35px;padding-left: 30px">About us<span class="sr-only"></span></a>
+                    <a class="nav-item nav-link active" href="/" style="font-size:35px;padding-left: 30px">Contact<span class="sr-only"></span></a>
 
                     {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'art_new' %}">Add Artwork</a>
-                    <a class="nav-item nav-link" href="{% url 'account_logout' %}">Logout</a>
+                    <a class="nav-item nav-link" href="{% url 'art_new' %}" style="font-size:35px;padding-left:500px;color:white;">Add Artwork</a>
+                    <a class="nav-item nav-link" href="{% url 'account_logout' %}" style="font-size:35px;color:white">Logout</a>
 
                     {% else %}
-                    <a class="nav-item nav-link" href="{% url 'account_login'%}">Login</a>
-                    <a class="nav-item nav-link" href="{% url 'account_signup' %}">Register</a>
+                    <a class="nav-item nav-link" href="{% url 'account_login'%}" style="font-size:35px;padding-left:500px;color:white">Login</a>
+                    <a class="nav-item nav-link" href="{% url 'account_signup' %}" style="font-size:35px;color:white">Register</a>
                     {% endif %}
                 </div>
             </div>
         </nav>
-
+        <br><br>
         {% block content %}
         {% endblock %}
+     
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
