updates on login and signup forms

--- a/genart-master/app/templates/allauth/account/login.html
+++ b/genart-master/app/templates/allauth/account/login.html
@@ -47,7 +47,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> -->
 
     <div class="form-group">
       {{ form.login.errors }}
-      <label for="exampleInputEmail1">Username</label>
+      <label for="Username">Username</label>
       {% comment %} <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Username"> {% endcomment %}
       {{ form.login }}
       
@@ -56,7 +56,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> -->
 
     <div class="form-group">
       {{ form.password.errors }}
-      <label for="exampleInputEmail1">Password</label>
+      <label for="Password">Password</label>
       {{ form.password }}
       {% comment %} <div class="form-control form-input"> {{ form.password }} </div> {% endcomment %}
     </div>
